--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -1,5 +1,5 @@
 @import './colors.css.scss';
-.modal-amplification {
+.modal-chart {
   display: none;
   /* Hidden by default */
   position: fixed;
@@ -168,469 +168,6 @@
   cursor: pointer;
 }
 
-.amplification-chart-state-active {
-  font-family: 'dinot';
-  .header {
-    .name-container {
-      width: 80%;
-    }
-  }
-  .amplification-options {
-    cursor: pointer;
-    color: #00b3ed !important;
-  }
-  .curve-header {
-    .plot-type-buttons {
-      width: 140px !important;
-      .buttons-wrapper {
-        .button {
-          width: 70px !important;
-        }
-      }
-    }
-    .curve-name {
-      //width: 55%;
-    }
-
-    .form-horizontal .editable
-    { 
-      padding-top: 5px;
-      display:inline-block;
-    }
-    /* The container <div> - needed to position the dropdown content */
-    .dropdown {
-      position: relative;
-      display: inline-block;
-      /* Dropdown Button */
-      .dropbtn {
-        background-color: white;
-        color: black;
-        padding: 6px;
-        font-size: 16px;
-        font-family: 'dinot-regular';
-        //font-weight: 300;
-        border: none;
-        cursor: pointer;
-        width: 120px;
-        border: 1px solid black;
-        .arrow-down{
-          float: right;
-          width: 15px;
-          padding-top: 5px;
-        }
-      }
-      /* Dropdown Content (Hidden by Default) */
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 120px;
-        font-family: 'dinot-regular';
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-      }
-      /* Links inside the dropdown */
-      .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        font-family: 'dinot-regular';
-      }
-
-      /* Change color of dropdown links on hover */
-      .dropdown-content a:hover {
-        background-color: #f1f1f1;
-      }
-
-      /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-      .show {
-        display:block;
-      }
-    }
-
-    .ampli-toggles {
-      //width: 45%;
-      padding-bottom: 5px;
-      .col-md-6,
-      .col-sm-6 {
-        padding-left: 0;
-        // padding-right: 0;
-        // &:last-of-type {
-        //   padding-right: 15px;
-        // }
-      }
-    }
-  }
-  .curve-body {
-    background-color: #eee;
-    padding: 20px;
-    display:flex;
-    // min-height: 600px;
-    // height: 610px;
-    .curve-plot {
-      background-color: #fff;
-      padding: 10px;
-      display: inline-block;
-      width: 85%;
-      float: left;
-      // height: 100%;
-    }
-    .additional-info {
-      // position: relative;
-      // display: inline-block;
-      display: flex;
-      float: left;
-      flex-direction: column;
-      justify-content: space-between;
-
-      width: 12%;
-      // height: 100%;
-      margin-left: 20px;
-      div {
-        width: 100%;
-        background-color: #fff;
-        padding: 10px;
-      }
-      .parameters {
-        padding: 0px;
-        .header {
-          color: #fff;
-          background-color: #000;
-          padding: 10px;
-        }
-        div {
-          padding: 10px;
-          .parameters-table {
-            width: 100%;
-            color: #000;
-            background-color: #fff;
-            margin: 0px;
-          }
-        }
-      }
-      .info {
-        color: #595959;
-        // background-color: #000;
-        margin-top: 5px;
-      }
-      .targets-set {
-        // position: absolute;
-        position: relative;
-        // bottom: -55px;
-        background-color: #fff;
-        //margin-left: 20px;
-        // margin-bottom: -66px;
-        padding: 10px;
-        display: block;
-        width: 100%;
-        height: 200px;
-        overflow: auto;
-        .targets-table {
-          width: 100%;
-          td {
-            font-family: "Dinot";
-            font-size: 13px;
-            // line-height: 20px;
-          }
-          .td-tik {
-            min-width: 30px;
-            text-align: right;
-            cursor: pointer;
-            span {
-              img {
-                width: 10px;
-                height: 10px;
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-  .content.row {
-    margin-left: 0;
-    margin-right: 0;
-    .plot-options {
-      text-align: right;
-      padding-right: 10px;
-      .plot-option {
-        display: inline-block;
-        text-align: left;
-      }
-    }
-  }
-  .chart-section {
-    // display: inline-block;
-    //padding-right: 20px;
-    //padding-left: 20px;
-    // width: 65%;
-    margin-left: 0;
-    margin-right: 0;
-    padding-right: 0;
-    padding-left: 0;
-    // vertical-align: top;
-    $item_switch_gap: 70px;
-    .subheader-switches {
-      margin-top: 20px;
-      margin-left: -50px;
-      margin-right: 20px;
-      .item-switch {
-        display: inline-block;
-        margin-left: $item_switch_gap;
-        .switch {
-          height: 15px;
-          margin-top: -2px;
-          width: 31px;
-          vertical-align: middle;
-          margin-left: 6px;
-          small {
-            width: 15px;
-            height: 15px;
-            border-width: 4px;
-          }
-          &.checked {
-            small {
-              left: 16px;
-            }
-          }
-        }
-        &.auto {
-          .switch {
-            background: #BBB;
-            border-color: #BBB;
-          }
-          small {
-            background: #bbb;
-          }
-          .set-auto {
-            color: $gray;
-          }
-        }
-        label {
-          color: $gray;
-          display: inline-block;
-          margin-left: 15px;
-          font-weight: 700;
-        }
-        span.set-auto {
-          color: $blue;
-          cursor: pointer;
-          margin-left: 15px;
-        }
-      }
-      .item-switch-channel {
-        display: inline-block;
-        margin-left: 20px;
-        float: right;
-        .switch {
-          height: 15px;
-          margin-top: -2px;
-          width: 31px;
-          vertical-align: middle;
-          small {
-            width: 15px;
-            height: 15px;
-            border-width: 4px;
-          }
-          &.checked {
-            small {
-              left: 16px;
-            }
-          }
-        }
-        &.auto {
-          .switch {
-            background: #BBB;
-            border-color: #BBB;
-          }
-          small {
-            background: #bbb;
-          }
-          .set-auto {
-            color: $gray;
-          }
-        }
-        label {
-          color: $gray;
-          display: inline-block;
-          margin-left: 6px;
-          font-weight: 700;
-          padding-right: 18px;
-        }
-        span.set-auto {
-          color: $blue;
-          cursor: pointer;
-          margin-left: 15px;
-        }
-      }
-    }
-    // $marginTop: 190px;
-    // .vertical-text {
-    //   transform: rotate(-90deg);
-    //   transform-origin: 20% 40%;
-    //   float: left;
-    //   // font-size: 10px;
-    //   // font-weight: bold;
-    //   margin-left: -26px;
-    //   margin-top: $marginTop;
-    //   margin-bottom: -$marginTop;
-    // }
-
-    .chart-container {
-      // margin-left: 30px;
-      // margin-bottom: -35px;
-      position: relative;
-      width: 100%;
-      // padding-right: 20px;
-      // height: 300px;
-    }
-    .chart-legend {
-      display: none;
-    }
-    .axis.y2-axis {
-      display: none;
-    }
-    .num-cycle-text {
-      margin-bottom: -30px;
-      margin-top: 20px;
-    }
-    .zoom-button {
-      border: none;
-      font-weight: bold;
-      background-color: #ffffff;
-    }
-    .ampli-zoom-scroll-container {
-      // margin-top: 50px;
-      padding-left: 50px;
-      padding-right: 50px;
-      .zoom-container {
-        .zoom-text {
-          display: inline-block;
-          width: 20%;
-          vertical-align: middle;
-        }
-        .ampli-slider {
-          display: inline-block;
-          width: 80%;
-          vertical-align: middle;
-          background: transparent;
-          cursor: pointer;
-        }
-      }
-      .ampli-scrollbar-container {
-        .scrollbar-directive {
-          margin-top: -1px;
-          cursor: pointer;
-        }
-      }
-    }
-  }
-  .table-container {
-    // display: inline-block;
-    margin-top: -20px;
-    // margin-bottom: -4px;
-    // width: 35%;
-    border-left: 2px solid black;
-    overflow: auto;
-    top: 0px;
-    bottom: 50px;
-    right: 0px;
-    // height: 94%;
-
-		.sample-span{
-			font-family: 'dinot-Regular';
-			font-size: 12px;
-    }
-    
-    .type-td{
-      text-align: center;
-      vertical-align: middle;
-      .type-span{
-        display: inline-block;
-        width: 23px;
-        height: 23px;
-        border: #000 1px solid;
-        border-radius: 50%;
-        font-family: 'dinot-Regular';
-        font-size: 14px;
-      }
-    }
-
-		.target-span{
-			font-family: 'dinot-Regular';
-      font-size: 16px;
-    }
-
-    input {
-      outline: none;
-      border: none;
-      font-family: 'dinot-Regular';
-      font-size: 16px;
-      //width: 140px;
-    }
-    table {
-      width: 100%;
-      // box-shadow: -1px 0px 1px $lightgray;
-      th {
-        background-color: lighten($gray, 15%);
-        // border-left: 1px solid lighten($lightgray, 15%);
-        // border-bottom: 1px solid lighten($lightgray, 15%);
-        color: #fff;
-        padding: 10px 15px;
-        &.channel-1 {
-          background-color: $blue;
-        }
-        &.channel-2 {
-          background-color: $green;
-        }
-      }
-      tr {
-        td {
-          // border-left: 1px solid lighten($lightgray, 15%);
-          // border-bottom: 1px solid lighten($lightgray, 15%);
-          color: $lightgray;
-          padding: 10px 0px;
-          text-align: center;
-          &:first-of-type {
-            color: $gray;
-            font-weight: bold;
-          }
-          &:last-of-type {
-            // border-right: 1px solid lighten($lightgray, 15%);
-            border-right: none;
-          }
-          .text {
-            display: inline-block;
-            vertical-align: middle;
-          }
-          .width1 {
-            padding: 10px;
-          }
-          .dummy-placeholder {
-            padding: 25px;
-          }
-        }
-        &.selected {
-          td {
-            color: #000;
-          }
-        }
-      }
-    }
-  }
-
-  .omit_checkbox {
-    color: red;
-    width: 50px !important;
-  }
-  .experiment-start-stop-buttons {
-    padding: 15px;
-  }
-  .amplification-well-switch {
-    margin-top: 30px;
-  }
-}
 .dot {
   border-radius: 100px;
   display: inline-block;
@@ -639,4 +176,272 @@
   margin-left: 10px;
   vertical-align: middle;
   width: 10px;
+}
+
+.chart-section {
+  // display: inline-block;
+  //padding-right: 20px;
+  //padding-left: 20px;
+  // width: 65%;
+  margin-left: 0;
+  margin-right: 0;
+  padding-right: 0;
+  padding-left: 0;
+  // vertical-align: top;
+  $item_switch_gap: 70px;
+  .subheader-switches {
+    margin-top: 20px;
+    margin-left: -50px;
+    margin-right: 20px;
+    .item-switch {
+      display: inline-block;
+      margin-left: $item_switch_gap;
+      .switch {
+        height: 15px;
+        margin-top: -2px;
+        width: 31px;
+        vertical-align: middle;
+        margin-left: 6px;
+        small {
+          width: 15px;
+          height: 15px;
+          border-width: 4px;
+        }
+        &.checked {
+          small {
+            left: 16px;
+          }
+        }
+      }
+      &.auto {
+        .switch {
+          background: #BBB;
+          border-color: #BBB;
+        }
+        small {
+          background: #bbb;
+        }
+        .set-auto {
+          color: $gray;
+        }
+      }
+      label {
+        color: $gray;
+        display: inline-block;
+        margin-left: 15px;
+        font-weight: 700;
+      }
+      span.set-auto {
+        color: $blue;
+        cursor: pointer;
+        margin-left: 15px;
+      }
+    }
+    .item-switch-channel {
+      display: inline-block;
+      margin-left: 20px;
+      float: right;
+      .switch {
+        height: 15px;
+        margin-top: -2px;
+        width: 31px;
+        vertical-align: middle;
+        small {
+          width: 15px;
+          height: 15px;
+          border-width: 4px;
+        }
+        &.checked {
+          small {
+            left: 16px;
+          }
+        }
+      }
+      &.auto {
+        .switch {
+          background: #BBB;
+          border-color: #BBB;
+        }
+        small {
+          background: #bbb;
+        }
+        .set-auto {
+          color: $gray;
+        }
+      }
+      label {
+        color: $gray;
+        display: inline-block;
+        margin-left: 6px;
+        font-weight: 700;
+        padding-right: 18px;
+      }
+      span.set-auto {
+        color: $blue;
+        cursor: pointer;
+        margin-left: 15px;
+      }
+    }
+  }
+  // $marginTop: 190px;
+  // .vertical-text {
+  //   transform: rotate(-90deg);
+  //   transform-origin: 20% 40%;
+  //   float: left;
+  //   // font-size: 10px;
+  //   // font-weight: bold;
+  //   margin-left: -26px;
+  //   margin-top: $marginTop;
+  //   margin-bottom: -$marginTop;
+  // }
+
+  .chart-container {
+    // margin-left: 30px;
+    // margin-bottom: -35px;
+    position: relative;
+    width: 100%;
+    // padding-right: 20px;
+    // height: 300px;
+  }
+  .chart-legend {
+    display: none;
+  }
+  .axis.y2-axis {
+    display: none;
+  }
+  .num-cycle-text {
+    margin-bottom: -30px;
+    margin-top: 20px;
+  }
+  .zoom-button {
+    border: none;
+    font-weight: bold;
+    background-color: #ffffff;
+  }
+  .chart-zoom-scroll-container {
+    // margin-top: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
+    .zoom-container {
+      .zoom-text {
+        display: inline-block;
+        width: 20%;
+        vertical-align: middle;
+      }
+      .ampli-slider {
+        display: inline-block;
+        width: 80%;
+        vertical-align: middle;
+        background: transparent;
+        cursor: pointer;
+      }
+    }
+    .ampli-scrollbar-container {
+      .scrollbar-directive {
+        margin-top: -1px;
+        cursor: pointer;
+      }
+    }
+  }
+}
+.table-container {
+  // display: inline-block;
+  margin-top: -20px;
+  // margin-bottom: -4px;
+  // width: 35%;
+  border-left: 2px solid black;
+  overflow: auto;
+  top: 0px;
+  bottom: 50px;
+  right: 0px;
+  // height: 94%;
+
+  .sample-span{
+    font-family: 'dinot-Regular';
+    font-size: 12px;
+  }
+  
+  .type-td{
+    text-align: center;
+    vertical-align: middle;
+    .type-span{
+      display: inline-block;
+      width: 23px;
+      height: 23px;
+      border: #000 1px solid;
+      border-radius: 50%;
+      font-family: 'dinot-Regular';
+      font-size: 14px;
+    }
+  }
+
+  .target-span{
+    font-family: 'dinot-Regular';
+    font-size: 16px;
+  }
+
+  input {
+    outline: none;
+    border: none;
+    font-family: 'dinot-Regular';
+    font-size: 16px;
+    //width: 140px;
+  }
+  table {
+    width: 100%;
+    // box-shadow: -1px 0px 1px $lightgray;
+    th {
+      background-color: lighten($gray, 15%);
+      // border-left: 1px solid lighten($lightgray, 15%);
+      // border-bottom: 1px solid lighten($lightgray, 15%);
+      color: #fff;
+      padding: 10px 15px;
+      &.channel-1 {
+        background-color: $blue;
+      }
+      &.channel-2 {
+        background-color: $green;
+      }
+    }
+    tr {
+      td {
+        // border-left: 1px solid lighten($lightgray, 15%);
+        // border-bottom: 1px solid lighten($lightgray, 15%);
+        color: $lightgray;
+        padding: 10px 15px;
+        &:first-of-type {
+          color: $gray;
+          font-weight: bold;
+        }
+        &:last-of-type {
+          // border-right: 1px solid lighten($lightgray, 15%);
+          border-right: none;
+        }
+        .text {
+          display: inline-block;
+          vertical-align: middle;
+        }
+        .width1 {
+          padding: 10px;
+        }
+        .dummy-placeholder {
+          padding: 25px;
+        }
+      }
+      &.selected {
+        td {
+          color: #000;
+        }
+      }
+    }
+  }
+}
+
+.omit_checkbox {
+  color: red;
+  width: 50px !important;
+}
+
+.chart-well-switch {
+  margin-top: 30px;
 }
