--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -77,7 +77,7 @@ limitations under the License.
                       <p>Color by</p>
                       <form role="form" class="form-horizontal" name="colorBy" novalidate>
                         <div class="form-group">
-                          <div class="col-md-12">
+                          <div class="col-md-12" style="padding-right: 0px;">
                             <div class="dropdown" ng-click="showColorByList()">
                               <button class="dropbtn">
                                 <span class="test" style="float:left;">{{color_by.charAt(0).toUpperCase() + color_by.slice(1)}}</span>
@@ -99,13 +99,9 @@ limitations under the License.
             </div>
           </div>
 
-
-
-
-
-          <div class="curve-body" full-height offset="400" min="500">
-            <div class="curve-plot" id="curve-plot">
-              <div class="chart-container" full-height offset="550" min="389">
+          <div class="curve-body" full-height offset="400" min="500" style="padding-right: 0px;">
+            <div class="curve-plot" id="curve-plot" style="display: flex; flex-direction: column; justify-content: space-between;">
+              <div class="chart-container" full-height offset="550" min="389" style="height: 85%;">
                 <div class="chart-error B1" ng-show="retrying && !fetching && error">
                   <strong class="text-black">Unable to load chart data</strong>
                   <p ng-bind="error"></p>
@@ -118,10 +114,10 @@ limitations under the License.
                   <p class="B2">May take a minute</p>
                 </div>
                 <amplification-chart data="amplification_data" config="chartConfig" zoom="ampli_zoom" on-zoom="onZoom" on-select-line="onSelectLine" on-unselect-line="onUnselectLine" on-update-properties="onUpdateProperties" scroll="ampli_scroll.value" show="showAmpliChart"></amplification-chart>
-                <div>
+                <!-- <div>
                   <button class="button zoom-button" ng-click="zoomIn()" style="text-align: center; vertical-align: middle; padding-left: 10px; padding-right: 10px; font-size: 20px">+</button>
                   <button class="button zoom-button" ng-click="zoomOut()" style="text-align: center; vertical-align: middle; padding-left: 10px; padding-right: 10px; font-size: 20px; margin-left: 30px;">-</button>
-                </div>
+                </div> -->
                 <!-- <table>
                   <tr>
                     <td><button class="button zoom-button" ng-click="zoomIn()" style="height: 30px; text-align: center; vertical-align: middle; padding: 5px">+</button></td>
@@ -132,6 +128,15 @@ limitations under the License.
                     <td><button class="button zoom-button" ng-click="zoomOut()">-</button></td>
                   </tr>
                 </table> -->
+              </div>
+              <div style="display: flex; flex-direction: row; height: 15%;">
+                <div style="display: block; width: 5%; display: flex; flex-direction: column; height: 100%;">
+                  <button class="button zoom-button" ng-click="zoomIn()" style="text-align: center; vertical-align: middle; font-size: 20px; margin-right: 40px; padding: 0px; height: 50%; width: 30px;">+</button>
+                  <button class="button zoom-button" ng-click="zoomOut()" style="text-align: center; vertical-align: middle; font-size: 20px; margin-left: 40px; padding: 0px; height: 50%; width: 30px;">-</button>
+                </div>
+                <div style="display: grid; width: 95%; height: 100%; align-content: center; vertical-align: middle; text-align: center">
+                    <font style="font-weight: bold;">Cycle Number</font>
+                </div>
               </div>
             </div>
 
