build Standard curve view skeleton

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -83,7 +83,7 @@ limitations under the License.
                                 <span class="test" style="float:left;">{{color_by.charAt(0).toUpperCase() + color_by.slice(1)}}</span>
                                 <img class="arrow-down" src="/images/arrow-down.png">
                               </button>
-                              <div id="colorByList" class="dropdown-content" style="font-size: 15px">
+                              <div id="colorByList_ampli" class="dropdown-content" style="font-size: 15px">
                                 <a href="" ng-click="color_by='sample'" value="abc">Sample</a>
                                 <a href="" ng-click="color_by='target'" value="abc">Target</a>
                                 <a href="" ng-click="color_by='well'" value="abc">Well</a>
