--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -232,8 +232,8 @@
     .curve-plot {
       background-color: #fff;
       padding: 10px;
-      display: inline-block;
-      width: 85%;
+      // display: inline-block;
+      // width: 85%;
       float: left;
       // height: 100%;
     }
@@ -251,7 +251,7 @@
       div {
         width: 100%;
         background-color: #fff;
-        padding: 10px;
+        padding: 0px;
       }
       .parameters {
         padding: 0px;
@@ -273,6 +273,12 @@
       .info {
         color: #595959;
         // background-color: #000;
+        margin-top: 5px;
+      }
+      
+      .info1 {
+        color: #fff;
+        background-color: #595959;
         margin-top: 5px;
       }
       .targets-set {
