--- a/frontend/stylesheets/standard-curve-chart.css.scss
+++ b/frontend/stylesheets/standard-curve-chart.css.scss
@@ -211,9 +211,10 @@
     .ampli-toggles {
       //width: 45%;
       padding-bottom: 5px;
+      padding-right: 0px;
       .col-md-6,
       .col-sm-6 {
-        padding-left: 0;
+        padding-left: 0px;
         // padding-right: 0;
         // &:last-of-type {
         //   padding-right: 15px;
@@ -224,6 +225,7 @@
   .curve-body {
     background-color: #eee;
     padding: 20px;
+    display: flex;
     // min-height: 600px;
     // height: 610px;
     .curve-plot {
@@ -236,14 +238,19 @@
     }
     .additional-info {
       // position: relative;
-      display: inline-block;
-      width: 12%;
+      //display: inline-block;
+      display: flex;
+      float: left;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 16%;
       // height: 100%;
       margin-left: 20px;
       div {
         width: 100%;
         background-color: #fff;
-        padding: 10px;
+        // padding: 10px;
+        padding: 0px
       }
       .parameters {
         padding: 0px;
@@ -267,22 +274,28 @@
         // background-color: #000;
         margin-top: 5px;
       }
+      .info {
+        color: #595959;
+        // background-color: #000;
+        margin-top: 5px;
+      }
+      
       .info1 {
         color: #fff;
         background-color: #595959;
         margin-top: 5px;
       }
       .targets-set {
-        position: absolute;
-        display: none;
+        //position: absolute;
+        position: relative;
         // bottom: -55px;
         background-color: #fff;
         //margin-left: 20px;
         // margin-bottom: -66px;
         padding: 10px;
-        // display: inline-block;
-        width: 12%;
-        height: 130px;
+        display: block;
+        width: 100%;
+        height: 200px;
         overflow: auto;
         .targets-table {
           width: 100%;
@@ -291,7 +304,7 @@
             font-size: 13px;
             // line-height: 20px;
           }
-            .td-tik {
+          .td-tik {
             min-width: 30px;
             text-align: right;
             cursor: pointer;
@@ -331,5 +344,247 @@
       }
     }
   }
-  
+  .chart-section {
+    // display: inline-block;
+    //padding-right: 20px;
+    //padding-left: 20px;
+    // width: 65%;
+    margin-left: 0;
+    margin-right: 0;
+    padding-right: 0;
+    padding-left: 0;
+    // vertical-align: top;
+    $item_switch_gap: 70px;
+    .subheader-switches {
+      margin-top: 20px;
+      margin-left: -50px;
+      margin-right: 20px;
+      .item-switch {
+        display: inline-block;
+        margin-left: $item_switch_gap;
+        .switch {
+          height: 15px;
+          margin-top: -2px;
+          width: 31px;
+          vertical-align: middle;
+          margin-left: 6px;
+          small {
+            width: 15px;
+            height: 15px;
+            border-width: 4px;
+          }
+          &.checked {
+            small {
+              left: 16px;
+            }
+          }
+        }
+        &.auto {
+          .switch {
+            background: #BBB;
+            border-color: #BBB;
+          }
+          small {
+            background: #bbb;
+          }
+          .set-auto {
+            color: $gray;
+          }
+        }
+        label {
+          color: $gray;
+          display: inline-block;
+          margin-left: 15px;
+          font-weight: 700;
+        }
+        span.set-auto {
+          color: $blue;
+          cursor: pointer;
+          margin-left: 15px;
+        }
+      }
+      .item-switch-channel {
+        display: inline-block;
+        margin-left: 20px;
+        float: right;
+        .switch {
+          height: 15px;
+          margin-top: -2px;
+          width: 31px;
+          vertical-align: middle;
+          small {
+            width: 15px;
+            height: 15px;
+            border-width: 4px;
+          }
+          &.checked {
+            small {
+              left: 16px;
+            }
+          }
+        }
+        &.auto {
+          .switch {
+            background: #BBB;
+            border-color: #BBB;
+          }
+          small {
+            background: #bbb;
+          }
+          .set-auto {
+            color: $gray;
+          }
+        }
+        label {
+          color: $gray;
+          display: inline-block;
+          margin-left: 6px;
+          font-weight: 700;
+          padding-right: 18px;
+        }
+        span.set-auto {
+          color: $blue;
+          cursor: pointer;
+          margin-left: 15px;
+        }
+      }
+    }
+    .chart-container {
+      position: relative;
+      width: 100%;
+    }
+    .chart-legend {
+      display: none;
+    }
+    .axis.y2-axis {
+      display: none;
+    }
+    .num-cycle-text {
+      margin-bottom: -30px;
+      margin-top: 20px;
+    }
+    .zoom-button {
+      border: none;
+      font-weight: bold;
+      background-color: #ffffff;
+    }
+    .chart-zoom-scroll-container {
+      // margin-top: 50px;
+      padding-left: 50px;
+      padding-right: 50px;
+      .zoom-container {
+        .zoom-text {
+          display: inline-block;
+          width: 20%;
+          vertical-align: middle;
+        }
+        .ampli-slider {
+          display: inline-block;
+          width: 80%;
+          vertical-align: middle;
+          background: transparent;
+          cursor: pointer;
+        }
+      }
+      .ampli-scrollbar-container {
+        .scrollbar-directive {
+          margin-top: -1px;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .table-container {
+    // display: inline-block;
+    margin-top: -20px;
+    // margin-bottom: -4px;
+    // width: 35%;
+    border-left: 2px solid black;
+    overflow: auto;
+    top: 0px;
+    bottom: 50px;
+    right: 0px;
+    // height: 94%;
+
+		.sample-span{
+			font-family: 'dinot-Regular';
+			font-size: 12px;
+    }
+    
+    .type-td{
+      text-align: center;
+      vertical-align: middle;
+      .type-span{
+        display: inline-block;
+        width: 23px;
+        height: 23px;
+        border: #000 1px solid;
+        border-radius: 50%;
+        font-family: 'dinot-Regular';
+        font-size: 14px;
+      }
+    }
+
+		.target-span{
+			font-family: 'dinot-Regular';
+      font-size: 16px;
+    }
+
+    input {
+      outline: none;
+      border: none;
+      font-family: 'dinot-Regular';
+      font-size: 16px;
+      //width: 140px;
+    }
+    table {
+      width: 100%;
+      // box-shadow: -1px 0px 1px $lightgray;
+      th {
+        background-color: lighten($gray, 15%);
+        // border-left: 1px solid lighten($lightgray, 15%);
+        // border-bottom: 1px solid lighten($lightgray, 15%);
+        color: #fff;
+        padding: 10px 15px;
+        &.channel-1 {
+          background-color: $blue;
+        }
+        &.channel-2 {
+          background-color: $green;
+        }
+      }
+      tr {
+        td {
+          // border-left: 1px solid lighten($lightgray, 15%);
+          // border-bottom: 1px solid lighten($lightgray, 15%);
+          color: $lightgray;
+          padding: 10px 0px;
+          text-align: center;
+          &:first-of-type {
+            color: $gray;
+            font-weight: bold;
+          }
+          &:last-of-type {
+            // border-right: 1px solid lighten($lightgray, 15%);
+            border-right: none;
+          }
+          .text {
+            display: inline-block;
+            vertical-align: middle;
+          }
+          .width1 {
+            padding: 10px;
+          }
+          .dummy-placeholder {
+            padding: 25px;
+          }
+        }
+        &.selected {
+          td {
+            color: #000;
+          }
+        }
+      }
+    }
+  }
 }
