amplification info panel design changed

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -171,9 +171,9 @@ limitations under the License.
                   <div class="info" style="font-size: 15px; padding-top: 8px; padding-bottom: 8px;">
                     Channel: {{index_channel + 1}}
                   </div>
-                  <div class="info1" ng-style="bgcolor_wellSample"  style="min-height: 41px; font-size: 15px; color:white; margin-top: 5px">
+                  <!-- <div class="info1" ng-style="bgcolor_wellSample"  style="min-height: 41px; font-size: 15px; color:white; margin-top: 5px">
                     {{label_well}}{{label_sample ? ", " : ""}}{{label_sample}}
-                  </div>
+                  </div> -->
               </div>
               <div class="targets-set" ng-show="targetsSet.length" style="padding-top:5px; padding-bottom: 0px">
                 <table class="targets-table">
