--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -94,7 +94,7 @@ limitations under the License.
                                 <img class="arrow-down" src="/images/arrow-down.png">
                               </button>
                               <div id="colorByList_standard" class="dropdown-content" style="font-size: 15px">
-                                <a href="" ng-click="color_by='sample'" value="abc">Samle</a>
+                                <a href="" ng-click="color_by='sample'" value="abc">Sample</a>
                                 <a href="" ng-click="color_by='target'" value="abc">Target</a>
                                 <a href="" ng-click="color_by='well'" value="abc">Well</a>
                               </div>
@@ -161,7 +161,7 @@ limitations under the License.
                         </tr>
                         <tr>
                           <td style="font-size: 15px; padding: 2px;">R2:</td>
-                          <td style="font-size: 15px; padding: 2px;">.998</td>
+                          <td style="font-size: 15px; padding: 2px;">998</td>
                         </tr>
                         <tr>
                           <td style="font-size: 15px; padding: 2px;">Slop:</td>
@@ -181,7 +181,10 @@ limitations under the License.
                     B4, Sample A
                   </div>
               </div>
-             
+              
+              
+
+
               <div class="targets-set" ng-show="targetsSet.length" style="padding-top:5px; padding-bottom: 0px" >
                 <table class="targets-table">
                   <tr ng-repeat="target in targetsSet">
