--- a/frontend/stylesheets/standard-curve-chart.css.scss
+++ b/frontend/stylesheets/standard-curve-chart.css.scss
@@ -249,8 +249,7 @@
       div {
         width: 100%;
         background-color: #fff;
-        // padding: 10px;
-        padding: 0px
+        padding: 10px;
       }
       .parameters {
         padding: 0px;
